# OPC-AI-Automation

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
backend/: main.py
backend/agents/: __init__.py  base_agent.py  code_retrieval_agent.py  coding_agent.py  innovation_agent.py  issue_discovery_agent.py  learning_agent.py  notification_agent.py  planning_agent.py  pr_agent.py  repo_discovery_agent.py  repository_analyzer_agent.py  review_agent.py  testing_agent.py
backend/api/: __init__.py  deps.py
backend/api/routes/: __init__.py  agent_runs.py  analytics.py  discovery.py  feedback.py  innovation.py  issues.py  (+5 more)
backend/core/: circuit_breaker.py  config.py  database.py  llm.py  rate_limiter.py  sandbox.py  security.py  vector_store.py
backend/models/: __init__.py  agent_run.py  agent_run_log.py  agent_run_step.py  discovery_source.py  embedding.py  execution_log.py  feedback.py  innovation.py  issue.py  pull_request.py  repository.py  repository_knowledge.py
backend/schemas/: __init__.py  agent_run.py  analytics.py  issue.py  pull_request.py  repository.py
backend/services/: __init__.py  context_manager.py  cost_tracker.py  github_service.py  issue_scorer.py  merge_predictor.py  repo_discovery_service.py  secrets_manager.py
backend/tools/: __init__.py  code_analysis_tool.py  file_tool.py  git_tool.py  github_tool.py
backend/workers/: scheduler.py  webhook_processor.py  workflow.py
docker/: backend.Dockerfile  frontend.Dockerfile  sandbox.Dockerfile
frontend/: next.config.mjs  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: agent-run-live.tsx  pr-review-card.tsx
frontend/public/: .gitkeep
scripts/: create_agents.py  create_frontend.py  create_models.py  create_schemas.py  create_services.py  seed.py  setup.sh
(+25 files in other folders)
