[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "opensource-ai-engineer"
version = "1.0.0"
description = "Autonomous AI Software Engineering system that discovers, solves, and submits pull requests to open-source repositories"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OpenSource AI Engineer Team" }]
keywords = ["ai", "software-engineering", "automation", "github", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

[project.scripts]
ose = "backend.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N805", "B904"]
exclude = ["alembic/versions/", ".venv", "__pycache__"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/*" = ["F401", "E402"]

[tool.black]
target-version = ["py312"]
line-length = 100
skip-string-normalization = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
